kubernetes/openemr/service.yaml
apiVersion: v1
kind: Service
metadata:  
  labels:
    name: openemr
  name: openemr
spec:
  #type: LoadBalancer
  ports:
  - name: "http"
    port: 8080
    targetPort: 80
  - name: "https"
    port: 8090
    targetPort: 443
  selector:
    name: openemr
